test/typeerrors/Heuristics/UnifierLambda.hs
test = \f -> (f True, f "hello")
